--- a/example/HelloWorld/CMakeLists.txt
+++ b/example/HelloWorld/CMakeLists.txt
@@ -37,6 +37,9 @@ include(CheckCXXCompilerFlag)
 check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
 check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 
+set(SOURCE_FILES Main.cpp)
+add_executable(HelloWorld ${SOURCE_FILES})
+
 if (COMPILER_SUPPORTS_CXX11)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 elseif (COMPILER_SUPPORTS_CXX0X)
