Add memory check for example

--- a/example/Person/CMakeLists.txt
+++ b/example/Person/CMakeLists.txt
@@ -25,7 +25,7 @@
 #
 
 cmake_minimum_required(VERSION 2.8)
-project(HelloWorld CXX)
+project(App CXX)
 
 # Force Linux and Darwin use GCC
 set(CMAKE_C_COMPILER "gcc")
@@ -38,7 +38,7 @@ check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
 check_cxx_compiler_flag("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 
 set(SOURCE_FILES Main.cpp)
-add_executable(HelloWorld ${SOURCE_FILES})
+add_executable(App ${SOURCE_FILES})
 
 if (COMPILER_SUPPORTS_CXX11)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
