Add continuous command to avoid exit

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_script:
 - cmake . -DCMAKE_BUILD_TYPE=debug -DCMAKE_VERBOSE_MAKEFILE=true
 script:
 - make native_test -j8
-- ./misc/memory_check
+- ./misc/memory_check  && cd example && ./memory_check
 after_script:
 - sudo pkill python
 notifications:
